<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/persoenliche_daten">

        <EditTextPreference
                app:key="Vorname"
                app:title="@string/vorname"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="Nachname"
                app:title="@string/nachname"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="StrasseNr"
                app:title="@string/strasseNr"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="Ort"
                app:title="@string/ort"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="Email"
                app:title="@string/email"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="Telefon"
                app:title="@string/telefon"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="reply"
                app:title="@string/reply_title"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:defaultValue="reply"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
